# scattering_solver

./: .gitignore  Cargo.toml
benchmarks/: Cargo.toml
benchmarks/benches/: matrix_benchmarks.rs
benchmarks/src/: lib.rs
data_analysis/: tests.ipynb  utility.py
raport/: raport.tex
src/: asymptotic_states.rs  boundary.rs  collision_params.rs  defaults.rs  lib.rs  main.rs  numerovs.rs  observables.rs  potentials.rs  problems.rs  state.rs  types.rs  utility.rs
src/numerovs/: multi_numerov.rs  numerov.rs  numerov_modifier.rs  propagator.rs  ratio_numerov.rs  single_numerov.rs
src/numerovs/multi_numerov/: dmatrix_backed.rs  faer_backed.rs  smatrix_backed.rs  static_backed.rs
src/observables/: bound_states.rs  dependencies.rs  observable_extractor.rs  s_matrix.rs
src/potentials/: composite_potential.rs  coupled_potential.rs  coupling_factory.rs  dispersion_potential.rs  function_potential.rs  gaussian_coupling.rs  masked_potential.rs  morse_long_range.rs  multi_chan_potential.rs  multi_coupling.rs  multi_diag_potential.rs  null_potential.rs  pair_potential.rs  potential.rs  potential_factory.rs
src/problems/: faer.rs  many_channels.rs  nalgebra.rs  single_channel.rs  two_channel.rs
src/problems/faer/: many_channels.rs  two_channel.rs
src/problems/nalgebra/: many_channels.rs  two_channel.rs
tests/: test_two_channel.rs
