[package]
name = "scattering_solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quantum = { git = "https://github.com/Wleter/quantum.git" }
nalgebra = { version = "0.32.3" }
num-traits = "0.2.17"
num = "0.4.1"
ndarray = "0.15.6"
ndarray-linalg = "0.16.0"
rayon = "1.8.0"

[profile.release]
opt-level = 3
codegen-units = 1
panic = "abort"
debug = true