[package]
name = "scattering_solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build]
rustflags = ["-C", "target-cpu=native"]

[dependencies]
quantum = { git = "https://github.com/Wleter/quantum.git" }
nalgebra = { version = "*" }
num-traits = "*"
num = "*"
ndarray = "*"
ndarray-linalg = "*"
rayon = "*"

[profile.release]
opt-level = 3
codegen-units = 1
lto = "thin"
panic = "abort"
debug = true