[package]
name = "scattering_solver"
version = "0.1.0"
edition = "2021"

[dependencies]
num-traits = "0.2.19"
num = "0.4.3"
rayon = "1.10.0"
quantum = { git = "https://github.com/Wleter/quantum.git" }
faer = { version = "0.19.4", optional = true }
ndarray = { version = "0.16.1", optional = true }
nalgebra = { version = "0.33.0", optional = true }

[features]
default = ["faer"]
faer = ["dep:faer", "quantum/faer"]
ndarray = ["dep:ndarray", "quantum/ndarray"]
nalgebra = ["dep:nalgebra", "quantum/nalgebra"]

[profile.dev.package.faer]
opt-level = 3

# [profile.release]
# debug = true